# Urbis

./: .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  .versionrc.js  CMakeLists.txt
.github/workflows/: ci.yml
cmake/: AddLintTarget.cmake  Catch.cmake  CatchAddTests.cmake  EnableProfiling.cmake  FindCCache.cmake  FindClangFormat.cmake  FindClangTidy.cmake  FindCmakeFormat.cmake  FindCmakeLint.cmake  FindCppCheck.cmake  FindCppLint.cmake  FindIWYU.cmake  FindPackageMacro.cmake  GenerateVersionHeader.cmake  GenerateVersionHeader.hpp.in  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  SetDefaultBuildType.cmake
src/: CMakeLists.txt  core.cpp  core.hpp  logging.cpp  logging.hpp  main.cpp
src/data/: folders.cpp  folders.hpp  settings.cpp  settings.hpp
test/: CMakeLists.txt  main.cpp
test/data/: folders.cpp
